Fix horizontal scrolling on mobile devices

--- a/static/less/public/main.less
+++ b/static/less/public/main.less
@@ -338,13 +338,7 @@ footer.local {
     }
   }
 
-  /* Negate the body margins with padding to achieve 100% width */
   footer {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding-left: 20px;
-    padding-right: 20px;
-
     .category {
       margin-bottom: 30px;
     }
